--- a/configs/environments/.env.example
+++ b/configs/environments/.env.example
@@ -64,3 +64,8 @@ KB_REGISTRY_FAIL_FAST=false
 KB_MAPPING_FAIL_FAST=false
 KB_MAPPING_REQUIRE_ENABLED_SCENARIOS=true
 RETRIEVAL_LOG_MAX_BYTES=20971520
+
+# Docker deployment
+# Optional: override docker compose image and host port.
+DOCKER_IMAGE=your-dockerhub-username/dify-model:latest
+HOST_PORT=8080
