--- a/configs/environments/.env.example
+++ b/configs/environments/.env.example
@@ -65,6 +65,19 @@ KB_MAPPING_FAIL_FAST=false
 KB_MAPPING_REQUIRE_ENABLED_SCENARIOS=true
 RETRIEVAL_LOG_MAX_BYTES=20971520
 
+# Admin console
+ADMIN_CONSOLE_ENABLED=false
+ADMIN_TOKEN=
+ADMIN_CONFIG_RELOAD_INTERVAL_MS=5000
+ADMIN_UPLOAD_MAX_BYTES=10485760
+ADMIN_DIFY_TEST_TIMEOUT_MS=15000
+ADMIN_MAX_PROMPT_CHARS=50000
+ADMIN_MAX_KEY_CHARS=512
+ADMIN_MAX_SUB_TYPE_ROUTES=64
+ADMIN_MAX_ARRAY_ITEMS=50
+ADMIN_HISTORY_LIST_LIMIT=50
+ADMIN_KEY_ENCRYPTION_SECRET=
+
 # Docker deployment
 # Optional: override docker compose image and host port.
 DOCKER_IMAGE=your-dockerhub-username/dify-model:latest
