--- a/configs/environments/.env.example
+++ b/configs/environments/.env.example
@@ -36,6 +36,8 @@ DIFY_BASE_URL=
 DIFY_API_KEY=
 # Optional JSON map: {"wf_xxx":"api-key-for-wf","wf_yyy":"api-key-for-wf-2"}
 DIFY_API_KEYS_BY_WORKFLOW_ID={}
+# Resume AI workflow key map example:
+# DIFY_API_KEYS_BY_WORKFLOW_ID={"wf_resume_import_parse":"app-xxxx","wf_resume_section_optimize":"app-yyyy","wf_resume_full_optimize":"app-zzzz"}
 DIFY_TIMEOUT_MS=15000
 DIFY_FALLBACK_TO_MOCK=true
 DIFY_USER_PREFIX=difymodel
@@ -69,6 +71,7 @@ RETRIEVAL_LOG_MAX_BYTES=20971520
 ADMIN_CONSOLE_ENABLED=false
 ADMIN_TOKEN=
 ADMIN_CONFIG_RELOAD_INTERVAL_MS=5000
+ADMIN_ROUTE_OVERRIDE_SCENARIOS=exam_qa
 ADMIN_UPLOAD_MAX_BYTES=10485760
 ADMIN_DIFY_TEST_TIMEOUT_MS=15000
 ADMIN_MAX_PROMPT_CHARS=50000
