--- a/configs/environments/.env.example
+++ b/configs/environments/.env.example
@@ -39,6 +39,7 @@ DIFY_API_KEYS_BY_WORKFLOW_ID={}
 # Resume AI workflow key map example:
 # DIFY_API_KEYS_BY_WORKFLOW_ID={"wf_resume_import_parse":"app-xxxx","wf_resume_section_optimize":"app-yyyy","wf_resume_full_optimize":"app-zzzz"}
 DIFY_TIMEOUT_MS=15000
+DIFY_DISABLE_TIMEOUT=false
 DIFY_FALLBACK_TO_MOCK=true
 DIFY_USER_PREFIX=difymodel
 #
